@@ -1,6 +1,6 @@
 configuration Rational is
    Server : Partition := (Name_Server);
-   Client : Partition := (Tape_Client);
-   Driver : Partition;
-   procedure Tape_Client is in Driver;
+   Driver : Partition := (Tape_Driver);
+   Client : Partition;
+   procedure Tape_Client is in Client;
 end Rational;
